# RAG-FCC

./: README.md  cost_optimization.py  document_loader.py  embeddings_deep.py  langsmith_setup.py  main.py  monitoring.py  pyproject.toml  rag_pipeline.py  text_splitters.py  vector_stores.py
