[project]
name = "rag-fcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "langsmith>=0.8.15",
    "ollama>=0.6.2",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]
